--- a/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
@@ -69,8 +69,7 @@
 *{
 margin:0;
 padding:0;
-font-family:'robotoregular', Arial, Helvetica, sans-serif;
-font-size:13px;
+font-family:Arial, Helvetica, sans-serif;
 color: #323232;
 box-sizing:border-box;
 -moz-box-sizing:border-box;
