--- a/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
@@ -8,11 +8,11 @@
                     </div>
             <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Зачем мне этот сайт?</a></h2>
-                    <p>Наш сервис позволяет мнгновенно рассчитать точную стоимость страхового полиса ОСАГО. Эта услуга для Вас абсолютно бесплатна! Также у Вас есть возможность оформить полис в режиме онлайн.</p>
+                    <p>Наш сервис позволяет мгновенно рассчитать точную стоимость страхового полиса ОСАГО. Эта услуга для Вас абсолютно бесплатна! Также у Вас есть возможность оформить полис в режиме онлайн.</p>
             </div>
             <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Я хочу оформить полис ОСАГО. Как это сделать на Вашем сайте?</a></h2>
-                    <p>Для этого Вам нужно воспользоваться нашим <a href="{{path('step1')}}">калькулятором ОСАГО</a>, заполнить его параметрами автомобиля, а также настроить опции страхования. Справа Вы увидите свой расчет и сможете приступить к оформлению. Для этого Вам нужно нажать на кнопку "Оформить сейчас" и пройти простенькую регистрацию. Дальше Вам будет предложено ввести данные по автомобилю (номер кузова и гос. номер), а также Ваши личные данные как страхователя. Нажимая на "Завершить заказ", вы переходите на конечный этап оплаты и доставки. Вот и всё, осталось выбрать каким способом Вы предпочитаете оплатить и можете подтверждать заказ. После этого наш менеджер сразу свяжется с Вами для уточнения деталей по доставке.</p>
+                    <p>Для этого Вам нужно воспользоваться нашим <a href="{{path('step1')}}" title="Калькулятор ОСАГО">калькулятором ОСАГО</a>, заполнить его параметрами автомобиля, а также настроить опции страхования. Справа Вы увидите свой расчет и сможете приступить к оформлению. Для этого Вам нужно нажать на кнопку "Оформить сейчас" и пройти простенькую регистрацию. Дальше Вам будет предложено ввести данные по автомобилю (номер кузова и гос. номер), а также Ваши личные данные как страхователя. Нажимая на "Завершить заказ", вы переходите на конечный этап оплаты и доставки. Вот и всё, осталось выбрать каким способом Вы предпочитаете оплатить и можете подтверждать заказ. После этого наш менеджер сразу свяжется с Вами для уточнения деталей по доставке.</p>
 					</div>
                 <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Сколько времени занимает оформление полиса?</a></h2>
