--- a/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
@@ -3,10 +3,127 @@
 {% block content %}
  <section class="content">  
         <div class="limit text_content"><!-- .text_content for text-page only -->  
-                        <h3>Раздел находится в стадии разработки.</h3>
+                        <div class="title">
+                        <h1>Все, что мы должны знать о страховании ОСАГО</h1>
+                    </div>
+            <div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Что такое ОСАГО?</a></h2>
+                    <p>ОСАГО («Автоцивилка», ОГСПО, «Автогражданка») – это обязательное страхование автогражданской ответственности владельцев транспортных средств. Полис ОСАГО предусматривает страхование  материальной ответственности водителя перед пострадавшими вследствие ДТП третьими лицами – другими водителями либо пешеходами. При этом данный вид автострахования, в отличие от КАСКО, не компенсирует ущерб от повреждений транспортного средства, виновного в ДТП. Выплата страховой суммы происходит лишь в пользу пострадавших. Иными словами, если Вы являетесь виновником происшествия, то страховая компания вместо Вас оплачивает ремонт автомобиля пострадавшей стороны.</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Какие документы нужны для заключения договора ОСАГО?</a></h2>
+                    <p><b>Для заключения договора ОСАГО нужно иметь следующие документы:</b><br/><br/>
+					- заявление о заключении договора обязательного страхования (Вы можете оформить полис ОСАГО через наш сайт не выходя из дома);<br/>
+					- паспорт, либо другой документ, удостоверяющий личность (если страхователем является физическое лицо);<br/>
+					- свидетельство о регистрации юридического лица (если страхователем является юридическое лицо);<br/>
+					- водительское удостоверение на право управления транспортным средством (ТС);<br/>
+					- документ, подтверждающий право владения или пользования автомобилем;<br/>
+					- свидетельство о регистрации ТС;<br/>
+					- идентификационный код (ИНН);<br/>
+					- предыдущий полис ОСАГО, если таковой есть в наличии.
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Что влияет на стоимость ОСАГО?</a></h2>
+                    <p><b>На стоимость полиса ОСАГО влияет целый ряд факторов:</b><br/><br/>
+					- марка и модель транспортного средства;<br/>
+					- степень его износа;<br/>
+					- объем двигателя;<br/>
+					- используется ли ТС в качестве такси;<br/>
+					- территория регистрации;<br/>
+					- льготные удостоверения владельца (пенсионер, инвалид и т. д.);<br/>
+					- количество водителей транспортного средства, их стаж, возраст;<br/>
+					- кто является собственником автомобиля - юридическое или физическое лицо; <br/>
+					- история страхования транспортного средства;<br/>
+					- возможные скидки, например, система «бонус-малус»  (скидка в 5 % за год без страховых случаев), использование франшизы (когда предусмотренную часть ущерба несет на себе страхователь) и т. д.<br/><br/>
+
+					С помощью нашего <a href="{{path('step1')}}" title="Калькулятор ОСАГО">калькулятора ОСАГО</a> Вы можете просчитать стоимость для полиса ОСАГО абсолютно бесплатно.
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Попали в ДТП? Какие действия предпринимать, чтобы гарантированно получить 
+страховое возмещение?
+</a></h2>
+					<p>Участники ДТП должны оставаться на месте происшествия до прибытия сотрудников ГАИ, которые зафиксируют факт ДТП. После чего Вы получите первичную справку об аварии. Также участники могут отказаться от вызова ГАИ и заполнить европротокол.
+					<br/><br/>
+					Поврежденное авто в течение 10-ти дней должен осмотреть страховой эксперт. Если за этот срок страховщик не направит своего специалиста, Вы имеете право обратиться к независимому эксперту. При этом затраты должна возместить страховая компания. 
+					<br/><br/>
+					Для принятия решения о выплате у страховой компании должен быть собран весь пакет документов (заявление на получение страхового возмещения, расширенная справка из ГАИ, постановление суда, акт экспертизы повреждений ТС, который подтверждает размер ущерба).
+					<br/><br/>					 
+					Важно не затягивать сроки оформления документов. Страховая компания может отправить официальные запросы в ГАИ и суд, но если Вы получите справку и решение суда самостоятельно, то избежите долгого ожидания.
+					<br/><br/>
+					В случае, если пострадали люди, необходимо предоставить чеки об оплате лечения и лекарств.
+</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Какие существуют причины отказа выплаты страхового возмещения?</a></h2>
+                    <p>Существенно задержать выплату может отсутствие необходимых документов или их некорректное заполнение. 
+					<br/><br/>
+					В выплате могут отказать, если виновник ДТП использовал ТС неправомерно – например, когда застрахованным является юридическое лицо, а водитель, находившийся за рулем в момент ДТП, не вписан в полис ОСАГО.
+					<br/><br/>
+					Еще одна из возможных причин - ситуация, которая привела к повреждению ТС, не подпадает под определение «ДТП».
+					<br/><br/>
+					Следует помнить, что в случае, если в ст. 26 Закона Украины «О страховании», а также в Законе Украины «Об обязательном страховании гражданско-правовой ответственности владельцев наземных транспортных средств» нет указанной страховщиком причины для отказа в выплате, данное решение является незаконным. 
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Что может повлиять на размер страховой выплаты?</a></h2>
+                    <p>Закон Украины предусматривает лимит ответственности страховщика по выплатам по ОСАГО в размере 50 тыс. грн на одного пострадавшего и 100 тыс. грн. за вред жизни и здоровью потерпевшего.
+					<br/><br/>
+					Для того, чтобы грамотно определить размер страховой выплаты, Вам необходимо иметь счет с СТО, расчет страховой компании и отчет независимой экспертизы. 
+					<br/><br/>
+					Как правило, на сумму выплаты влияет и степень износа ТС.
+					<br/><br/>						
+					Вы должны помнить о том, что в соответствии с законом, Вы имеете право получить письменный ответ от страховой компании о размере страхового возмещения.
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Как выбрать надежную страховую компанию?</a></h2>
+                    <p>Для того, чтобы не ошибиться с выбором страховой компании (СК), следует обратить пристальное внимание на ряд факторов.
+					<br/><br/>
+					Преимущество в Ваших глазах должны иметь компании, которые существуют на рынке уже много лет, что доказывает их надежность и платежеспособность. Кроме того, следует обратить внимание на то, существует ли СК только в Вашем городе, или же она имеет национальный или международный статус. Иностранный капитал в уставном фонде, безусловно, повышает уровень финансовых гарантий компании.
+					<br/><br/>					 
+					Репутация – один из важнейших факторов, которым нужно руководствоваться при выборе страховщика. Чтобы узнать, что думают о компании клиенты, можно воспользоваться специальными рейтингами, представленными в сети, а также не игнорировать отзывы клиентов. Посмотреть такую информацию можно, например, на сайте <a href="http://www.strahnadzor.ua/bbs/comments" target="_blank">strahnadzor.ua</a>. 
+					<br/><br/>
+					Также обязательно нужно проверять наличие лицензии и сроки ее действия.
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Что такое европротокол?</a></h2>
+                    <p>Европротокол (ЕП) – это бланк уведомления о ДТП, который участники заполняют на месте аварии. ЕП предоставляется страховщику и служит основанием для выплаты страховой суммы. Главное преимущество использования ЕП состоит в том, что его заполнение возможно без вызова сотрудников ГАИ. Таким образом, участники ДТП избегают риска остаться без водительских прав, а также экономят значительное количество времени.
+					<br/><br/>
+					Бланк ЕП выдается бесплатно при оформлении ОСАГО.
+					<br/><br/>
+					Следует помнить, что только грамотно оформленный ЕП имеет юридическую силу, потому к его заполнению необходимо подойти со всей внимательностью.
+					</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Что такое ДГО?</a></h2>
+                    <p>ДГО расшифровывается как «добровольная гражданская ответственность». Когда водитель оформляет полис ОСАГО, с помощью договора ДГО он может существенно увеличить размер страхового покрытия. Данный полис используется в случаях, когда выплат по ОСАГО ( максимум 50 тыс. грн) не хватает для возмещения ущерба. При этом ДГО обойдется водителю около 300 грн для страховой суммы в пределах 100 тыс. грн. Для суммы от 500 тыс. грн и выше тарифы подбираются индивидуально. Стоит отметить, что договор ДГО оформляется только вместе с полисом ОСАГО и на тот же срок.</p>
+            </div>
+			<div class="boxFaq">
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Почему желательно страховаться от несчастного случая?</a></h2>
+                    <p>Использование транспорта в повседневной жизни – это не только комфорт, но и ряд рисков, которые могут угрожать здоровью и жизни водителя и пассажиров. Для того, чтобы максимально минимизировать и компенсировать их последствия, такие как значительные материальные затраты на лечение, и существует страхование от несчастного случая в дороге.
+					<br/><br/>
+					Данный вид страхования является добровольным и включает в себя такие страховые случаи, как тяжкие телесные повреждения и смерть. 
+					<br/><br/>
+					Стоимость оформления полиса зависит от количества застрахованных и срока его действия. 
+					</p>
+            </div>
         </div>
 			 <div class="footer-push"></div>
     </section>
 
 </section>
+<script type="text/javascript">
+jQuery(document).ready(function() {
+jQuery('.boxFaq a').click(function() {
+    var $parent = jQuery(this).closest('.boxFaq');
+    var $btn = $parent.find('span');
+    $parent.find('p').fadeToggle(400);
+    $btn.toggle();
+	$(this).toggleClass('active');
+    });
+});
+</script>
 {% endblock %}
