--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -108,7 +108,7 @@
                         <a href="{{path('osago-info')}}">Полезно знать<span class="arrow"></span><span class="delim"></span></a>
 						<ul class="inner_menu">
                             <li>
-                                <a href="{{path('osago-info')}}">Что такое ОСАГО?<span class="delimiter"></span></a>
+                                <a href="{{path('osago-info')}}">Все об ОСАГО<span class="delimiter"></span></a>
                                 <div class="shadow"></div>
                             </li>
                             <li><a href="{{path('event-info')}}">Страховой случай<span class="delimiter"></span></a></li>
