--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -827,7 +827,7 @@ footer {
   
 .scroll_box .viewport {
   width: 100%;
-  height: 180px;
+  height: 200px;
   overflow: hidden;
   position: relative;
   top: 5px; }
@@ -1979,12 +1979,16 @@ form.modal_form {
   background-color: transparent!important; }
 
 .ui-datepicker-title span {
-  font-family: "Arial", "Helvetica", sans-serif !important;
+  font-family: "Arial", Helvetica, sans-serif !important;
   font-size: 16px !important;
   line-height: 29px;
   font-weight: 600;
   color: #fff; }
 
+.ui-datepicker  {
+	font-size: 13px;
+}
+  
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next
 .ui-datepicker .ui-datepicker-prev:hover,
@@ -2002,7 +2006,7 @@ form.modal_form {
   background-image: url(../images/sprite.png) !important;
   background-repeat: no-repeat;
   cursor: pointer;
-  top: 8px!important;
+  top: 5px!important;
   margin-top: 0px !important;
   margin-left: -3px!important; }
 
@@ -2079,9 +2083,22 @@ form.personal_data {
     left: 0; }
     form.personal_data .param.bold {
       font-weight: 700!important; }
+	  
+form.personal_data span.add_info {
+	font-size: 13px;
+    color: #5F5F5F;
+	font-weight: 400!important;
+    margin: 0;
+    line-height: 1.3;
+    width: 130px!important;
+    position: absolute;
+    top: 45px;
+    left: 0;
+}
+
   form.personal_data .control_point {
     display: inline-block;
-    margin-left: 10px;
+    margin-left: 9px;
     margin-bottom: 0; }
     form.personal_data .control_point.size1 {
       width: 122px; }
