--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -76,7 +76,7 @@
                             </div>
                             <!-- -->
                             <div class="line adres_fields" style="display: none;">
-                                <div class="combo one_column">
+                                <div class="combo one_column" style="display: none;">
                                     <div class="current">Киевская область{# if app.session.get('region') %}
                                         {% for region in regions%} {% if region.id == app.session.get('region')%}{{region.value}}{% endif %}{% endfor %}{% else %}Выбрать область{% endif #}</div>
                                     <div class="arrow"></div>
@@ -94,7 +94,7 @@
                                 	</div>
                                     <input type="text" value="10{#app.session.get('region')#}" name="deliveryRegion" id="deliveryRegion"/>
                                 </div>
-                                <div class="combo one_column">
+                                <div class="combo one_column" style="display: none;">
                                     <div class="current">Киев{# if app.session.get('city') %}
                                         {% for city in cities %} {% if city.id == app.session.get('city')%}{{city.value}}{% endif %}{% endfor %}{% else %}Выбрать город{% endif #}</div>
                                     <div class="arrow"></div>
