remove strahnadzor link

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
@@ -83,7 +83,7 @@
 					<br/><br/>
 					Преимущество в Ваших глазах должны иметь компании, которые существуют на рынке уже много лет, что доказывает их надежность и платежеспособность. Кроме того, следует обратить внимание на то, существует ли СК только в Вашем городе, или же она имеет национальный или международный статус. Иностранный капитал в уставном фонде, безусловно, повышает уровень финансовых гарантий компании.
 					<br/><br/>					 
-					Репутация – один из важнейших факторов, которым нужно руководствоваться при выборе страховщика. Чтобы узнать, что думают о компании клиенты, можно воспользоваться специальными рейтингами, представленными в сети, а также не игнорировать отзывы клиентов. Посмотреть такую информацию можно, например, на сайте <a href="http://www.strahnadzor.ua/bbs/comments" target="_blank">strahnadzor.ua</a>. 
+					Репутация – один из важнейших факторов, которым нужно руководствоваться при выборе страховщика. Чтобы узнать, что думают о компании клиенты, можно воспользоваться специальными рейтингами, представленными в сети</a>. 
 					<br/><br/>
 					Также обязательно нужно проверять наличие лицензии и сроки ее действия.
 					</p>
