--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -2,9 +2,8 @@
 <html>
  <head>
 <style>
-#logos img.our {height: 30px;}
-#logos img.bbs {height: 57px;}
-	 
+     #logos img.our {height: 30px;}
+     #logos img.bbs {height: 57px;}
 .sign-info {
 	margin: 0;
 }
@@ -25,13 +24,12 @@
 	}
 
 	.sign-info table {
-
+      border: 1px dashed #838383;
 	}
 
 	.sign-info table td{
-    padding:15px;
     text-align: justify;
-    border: 1px solid #838383;
+    
 	}
 
 		.sign-info table table, .sign-info table table td {
