--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -10,7 +10,7 @@
 
 	.sign-info h1 {
 		font:normal 22pt 'PT Serif',arial,serif;
-		margin:1em 0 .2em 0;
+		margin:0 0 .2em 0;
 		padding:0;
 	}
 
@@ -59,7 +59,7 @@
 </h2>
 <br>
 
-<table width="100%" cellspacing="0" cellpadding="15" border="0">
+<table width="100%" cellspacing="0" cellpadding="10" border="0">
     <tbody><tr>
         <td width="40%" valign="top" rowspan="2">
             <strong>1. Страховик</strong><br><font size="-1">(назва, адреса, № телефону)</font><br>
@@ -92,7 +92,7 @@
 
 
 <p><strong>4. Страхова сума (ліміт відповідальності) на одного потерпілого</strong>, грн.</p>
-<table width="100%" cellspacing="0" cellpadding="15" border="0">
+<table width="100%" cellspacing="0" cellpadding="10" border="0">
     <tbody>
       <tr>
         <td width="50%" style="border-right:1px dashed #838383; border-bottom:1px dashed #838383;"><em>За шкоду, заподіяну життю і здоров'ю (на одного потерпілого)</em></td>
@@ -114,7 +114,7 @@
 
 <p><strong>5. Страхувальник</strong> <em>(П.І.Б./назва організації)</em></p>
 
-<table width="100%" cellspacing="0" cellpadding="15" border="0">
+<table width="100%" cellspacing="0" cellpadding="10" border="0">
 	<tbody><tr>
 		<td width="35%" valign="top" style="border-right:1px dashed #838383;">
             <table width="100%" cellpadding="0">
@@ -135,7 +135,7 @@
                 </tr>
             </tbody></table>
         </td>
-        <td width="60%" valign="top">
+        <td width="65%" valign="top">
             <table width="100%" cellpadding="0" border="0">
                 <tbody><tr>
                     <td><strong>Адреса</strong></td>
@@ -147,8 +147,8 @@
           <p></p>
             <table width="100%" cellpadding="0" border="0">
                 <tbody><tr>
-                    <td><strong>Телефон</strong></td>
-                    <td>{{ order.phone }}</td>
+                    <td width="30%"><strong>Телефон</strong></td>
+                    <td width="70%">{{ order.phone }}</td>
                 </tr>
             </tbody></table>
         </td>
