--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -445,7 +445,11 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
 .modal_preloader.on {
     display:block;
 }	
-		
+
+.inline-preloader {
+	text-align: center;
+	display:none;
+}
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- TOTAL -------------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
