--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -191,7 +191,7 @@
                                 <div class="form_green_button">Подтвердить заказ</div>
                                 <div class="form_grey_button">Отложить решение</div>
                             </div>
-                            <div class="inline-preloader" style="display:none;"></div>
+                            <div class="inline-preloader"><img src="{{asset('bundles/insurancecontent/images/4.gif')}}" alt="img" /></div>
                             <div style="clear: both;"></div>
                         </div>
                         <input type="hidden" id="activity" name="activity" value="{% if app.session.get('activity') is null %}1{% else %}{{app.session.get('activity')}}{% endif %}"/>
